# M.AI.UPbit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  deploy.json  instructions.md  pyproject.toml  requirements.txt  trade_journal.json
.github/workflows/: weekly-report.yml
.pytest_tmp/test_buy_success0/: th.json
.pytest_tmp/test_history_persists_across_i0/: history.json
.pytest_tmp/test_reads_file_content0/: instructions.txt
.pytest_tmp/test_save_and_load0/: history.json
.pytest_tmp/test_sell_success0/: th.json
benchmarks/: baseline.json
blog/: README.md
blog/drafts/: check2.py  (+85 more)
cli/: maiupbit.py
docs/: A-001-POC-Analysis.md  A-002-Market-Data-Accumulation-Analysis.md  B-001-AutoTrader-Bug-Report.md  D-002-LiveTrading-Flywheel.md  D-003-Market-Data-Accumulation-Architecture.md  D010-Substack-Newsletter-Channel-Setup.md  D010-Substack-Newsletter-Channel.md  D011-Newsletter-Automation-Plan.md  I-001-Implementation-Status.md  I-002-Market-Data-Persistence-Implementation.md  I010-First-Newsletter-Publication.md  I011-Payment-Setup-Progress.md  I012-Newsletter-Automation-Plan.md  I013-Security-Incident-API-Key-Exposure.md  O-001-Operation-Plan.md  PRD-v2.md  README.md  T-001-Test-Report.md  T-002-Market-Data-Persistence-Validation.md  content-strategy.md
maiupbit/: __init__.py  __main__.py  cli.py
models/: .gitkeep
myenv/: pyvenv.cfg
output/: test_ollama.py
reports/: daily_report_2026-03-25.json
scripts/: analyze.py  auto_trade.py  backfill_market_data.py  check_order.py  ci_weekly_report.py  daily_report.py  evaluate_trades.py  export_market_data.py  generate_newsletter.py  generate_newsletter_html.py  monitor.py  portfolio.py  publish_newsletter.py  publish_substack.py  quant.py  trade.py  train_model.py  update_readme_badge.py  update_readme_badges.py  weekly_performance.py
tests/: conftest.py  test_regression_guard.py
(+61 files in other folders)
